interview-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: interview
   label:
      app: interview
