interview-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-deployment-app
  namespace: interview
  labels:
     app: interview        
spec:
  replicas: 4
  selector:
    matchLabels:
      app: interview
  template:
    metadata:
      labels:
        app: interview
    spec:
      containers:
        - name: tec-nginx
          image: onaiv22/tec-nginx:latest
          ports:
            - containerPort: 80
