interview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interview-service
  namespace: interview

spec:
  selector:
    app: interview
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
