ingress-namespace-nw-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-network-policy
  namespace: ingress
spec:
  podSelector:
    matchLabels:
      app: interview
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tenant: ingress
    ports:
    - port: 80
